@@ -163,7 +163,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(cleanconst cleanconst.cpp)
     DFHACK_PLUGIN(3dveins 3dveins.cpp)
     DFHACK_PLUGIN(strangemood strangemood.cpp)
-endif()
+    DFHACK_PLUGIN(command-prompt command-prompt.cpp)endif()
 
 # this is the skeleton plugin. If you want to make your own, make a copy and then change it
 OPTION(BUILD_SKELETON "Build the skeleton plugin." OFF)
